# async-graphql-app

./: Cargo.toml  docker-compose.yaml
src/: lib.rs  main.rs  schema.rs
tests/: integration.rs
tests/api/: helpers.rs  integration.rs
