[package]
name = "async-graphql-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "async-graphql-app"

[dependencies]
async-graphql = "3.0.31"
async-graphql-actix-web = "3.0.31"
actix-web = { version = "4.0.1", default-features = false, features = ["macros"] }
